--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,6 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "Air Hockey Challenge"
+name = "Robot Air Hockey Challenge"
 authors = [{name = "Puze Liu", email = "puze@robot-learning.de"}]
 dynamic = ["version", "description"]
